Update HTML for Tottenham Matchday Hub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="el">
 <head>
   <meta charset="UTF-8">
-  <title>Champions League Invitation</title>
+  <title>Tottenham Matchday Hub ⚽</title>
+	
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <style>
     body {
@@ -145,3 +147,4 @@
 
 </body>
 </html>
+
