Add unofficial fan page disclaimer to index.html
Added footer note about unofficial fan page.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
     </div>
   </div>
 
+<div style="font-size:12px; opacity:0.6; margin-top:20px;">
+  Unofficial fan page – no affiliation with Tottenham Hotspur FC
+</div>
+
 <script>
   function updateCountdown() {
     const now = new Date();
@@ -147,4 +151,10 @@
 
 </body>
 </html>
+
+<!--
+Unofficial fan-made page.
+No affiliation with Tottenham Hotspur FC.
+-->
+
 
