Refactor footer to be fixed and centered
Updated footer style and added fixed positioning.

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     </div>
   </div>
 
-<div style="font-size:12px; opacity:0.6; margin-top:20px;">
-  Unofficial fan page – no affiliation with Tottenham Hotspur FC
-</div>
+  <footer style="font-size:12px; opacity:0.6; text-align:center; position:fixed; bottom:10px; width:100%;">
+    Unofficial fan page – no affiliation with Tottenham Hotspur FC
+  </footer>
 
 <script>
   function updateCountdown() {
@@ -156,5 +156,6 @@
 Unofficial fan-made page.
 No affiliation with Tottenham Hotspur FC.
 -->
+
 
 
