Change background image and style adjustments
Updated background image and adjusted styles for the matchday hub.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       color: white;
       background:
         linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)),
-        url("https://upload.wikimedia.org/wikipedia/commons/6/6e/Football_stadium_at_night.jpg");
+        url("https://tottenhamhotspurs.shorthandstories.com/revisit-some-of-our-uefa-champions-league-highlights/assets/50aOWbe2FF/ucl-tifoheader-16x9-2560x1440.jpg");
       background-size: cover;
       background-position: center;
       overflow: hidden;
@@ -165,3 +165,4 @@
 
 </body>
 </html>
+
